fix: Wrong overflow rule (wrong, though worked)

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -23,7 +23,7 @@ body.home {
         flex-flow: row nowrap;
         justify-content: flex-start;
         align-items: stretch;
-        overflow-y: auto;
+        overflow-x: auto;
         padding-top: 1em;
         padding-bottom: 1em;
       }
